--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
-    "expo-router": "^3.5.23",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.4",
+    "expo-router": "~4.0.2",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.1",
     "react-native-web": "^0.19.13",
     "react-navigation": "^5.0.0"
   },
